Make code more flexible.

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,3 +1,5 @@
 <div class="container">
-    <img id="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>"/>
+    <img id="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="100" data-start="100" data-end="7050"/>
+    <a id="screenshot" href="" download>Screenshot</a>
+    <button id="toggle">Pause</button>
 </div>
