--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,28 @@
 <div class="container">
-    <img id="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="100" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="100" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="200" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="300" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="400" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="500" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="600" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="700" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="800" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="900" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1000" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1100" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1200" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1300" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1400" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1500" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1600" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1700" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1800" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="1900" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="2000" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="2100" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="2200" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="2300" data-start="100" data-end="7050"/>
+    <img class="streamer" src="" alt="Image not loaded." data-url="<%= sails.getBaseurl() %>" data-play="1" data-frame="2400" data-start="100" data-end="7050"/>
     <a id="screenshot" href="" download>Screenshot</a>
     <button id="toggle">Pause</button>
 </div>
